--- a/blogging/.vscode/settings.json
+++ b/blogging/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
         "helloworld",
-        "nodetest"
+        "nodetest",
+        "usercollection",
+        "userlist"
     ]
 }
